Optimize code: resource management, proper logging, code quality improvements
- HttpGet: Use try-with-resources, StandardCharsets, entrySet(), ILog
- MD5: Use try-with-resources, StandardCharsets, remove throws clause, ILog
- AesUtil: Replace e.printStackTrace() with ILog
- TransApi: Use HTTPS, remove unnecessary try-catch, diamond operator
- TencentTransApi: Replace e.printStackTrace() with ILog
- TranslationUtil: Remove unnecessary StringBuffer in translate methods
- BaiduTranslateModel: Use StringBuilder instead of string concat in loop
- YoudaoTranslateModel: Use StringBuilder instead of StringBuffer
- YoudaoTranslateImpl: Local paramsMap, final YOUDAO_HOST, remove dead code
- TranslationView: Move static data init from constructor to static block
- TranslatePopupHandler: Use consistent pattern matching for instanceof

Co-authored-by: unknowIfGuestInDream <57802425+unknowIfGuestInDream@users.noreply.github.com>